RESOLVED FIXED25708
Cannot choose menu items in popups with many entries in Chromium
https://bugs.webkit.org/show_bug.cgi?id=25708
Summary Cannot choose menu items in popups with many entries in Chromium
Paul Godavari
Reported 2009-05-11 17:10:40 PDT
Popup menus that contain many entries cannot select menu items beyond the ~20th one in Mac Chromium. Chromium on Mac uses cocoa controls for handling these popups, and converts the index of the selected item to a coordinate corresponding to that item in the popup. On Windows and linux, Chromium's popup menu uses a ScrollView that limits the number of visible items to a maximum of 20. Any mouse click outside of that scroll view is discarded. The hit testing in Mac Chromium needs to account for the fact that native popup controls will display as many items as can fit on the screen, which is much more than the artificial limit of 20 that Chromium imposes.
Attachments
Fix Mac popup item selection for menus with many items (1.97 KB, patch)
2009-05-11 17:28 PDT, Paul Godavari
no flags
Fix Mac popup item selection for menus with many items (1.97 KB, patch)
2009-05-11 17:28 PDT, Paul Godavari
dglazkov: review+
Fix Mac popup item selection for menus with many items (corrected spelling in ChangeLog) (2.03 KB, patch)
2009-05-12 14:38 PDT, Paul Godavari
dglazkov: review+
Paul Godavari
Comment 1 2009-05-11 17:28:07 PDT
Created attachment 30208 [details] Fix Mac popup item selection for menus with many items
Paul Godavari
Comment 2 2009-05-11 17:28:52 PDT
Created attachment 30209 [details] Fix Mac popup item selection for menus with many items
Dimitri Glazkov (Google)
Comment 3 2009-05-12 09:27:37 PDT
Comment on attachment 30209 [details] Fix Mac popup item selection for menus with many items > + Bug 25708: Cannont choose menu items in popups with many entries in Chromium Spelling: Cannot.
Paul Godavari
Comment 4 2009-05-12 14:38:00 PDT
Created attachment 30247 [details] Fix Mac popup item selection for menus with many items (corrected spelling in ChangeLog)
Dimitri Glazkov (Google)
Comment 5 2009-05-12 14:54:44 PDT
Note You need to log in before you can comment on or make changes to this bug.